--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <title>My-Portfolio</title>
     <style>
+        
         body {
             background-color: #282c33;
         }
@@ -33,5 +34,45 @@
             </div>
         </div>
     </div>
+<!-- 
+    <div id="title">
+        <div>
+            <h1><b>/</b>about-me</h1>
+            <h3>Who am i?</h3>
+        </div>
+    </div>
+    <div id="frame1">
+        <div class="menu">
+            <p class="box1">Languages</p>
+            <p class="box1">Databases</p>
+            <p class="box1">Other</p>
+            <p class="box1">Tools</p>
+            <p class="box1">Frameworks</p>
+        </div>
+    </div>
+-->
+    <div class="skills_content">
+        <div class="skill-block">
+        <div class="skills-block_name">Languages</div>
+            <ul class="skills-block_list">
+                <li class="skill-block_skill">TypeScrips</li>
+                <li class="skill-block_skill">JavaScript</li>
+                <li class="skill-block_skill">Python</li>
+
+            </ul>
+        </div>
+    </div>
+    <div class="skills_content">
+        <div class="skill-block">
+        <div class="skills-block_name">Languages</div>
+            <ul class="skills-block_list">
+                <li class="skill-block_skill">TypeScrips</li>
+                <li class="skill-block_skill">JavaScript</li>
+                <li class="skill-block_skill">Python</li>
+
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
