--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </div>
     </div>
 -->
+
+<section class="skills">
+    <h2 class="h2">#Skills -------</h2>
+
     <div class="skills_content">
         <div class="skill-block">
         <div class="skills-block_name">Languages</div>
@@ -58,21 +62,62 @@
                 <li class="skill-block_skill">TypeScrips</li>
                 <li class="skill-block_skill">JavaScript</li>
                 <li class="skill-block_skill">Python</li>
-
             </ul>
         </div>
-    </div>
-    <div class="skills_content">
-        <div class="skill-block">
-        <div class="skills-block_name">Languages</div>
+    
+
+    <div class="skill-block">
+        <div class="skills-block_name">Databases</div>
             <ul class="skills-block_list">
-                <li class="skill-block_skill">TypeScrips</li>
-                <li class="skill-block_skill">JavaScript</li>
-                <li class="skill-block_skill">Python</li>
-
+                <li class="skill-block_skill">SQlite</li>
+                <li class="skill-block_skill">MongoDB</li>
+                <li class="skill-block_skill">PostogreSQL</li>
             </ul>
-        </div>
     </div>
 
+    <div class="skill-block">
+        <div class="skills-block_name">Other</div>
+            <ul class="skills-block_list">
+                <li class="skill-block_skill">HTML</li>
+                <li class="skill-block_skill">CSS</li>
+                <li class="skill-block_skill">SCSS</li>
+                <li class="skill-block_skill">EJS</li>
+                <li class="skill-block_skill">Ej</li>
+                <li class="skill-block_skill">Jinja2</li>
+                <li class="skill-block_skill">Node.Js</li>
+                <li class="skill-block_skill">Less</li>
+                <li class="skill-block_skill">Pug</li>
+            </ul>
+    </div>
+
+    <div class="skill-block">
+        <div class="skills-block_name">Tools</div>
+            <ul class="skills-block_list">
+                <li class="skill-block_skill">VScode</li>
+                <li class="skill-block_skill">NeoVim</li>
+                <li class="skill-block_skill">Figma</li>
+                <li class="skill-block_skill">Git & GitHub</li>
+                <li class="skill-block_skill">fontAwasome</li>
+            </ul>
+    </div>
+    
+    <div class="skill-block">
+        <div class="skills-block_name">Frameworks</div>
+            <ul class="skills-block_list">
+                <li class="skill-block_skill">React</li>
+                <li class="skill-block_skill">Vue</li>
+                <li class="skill-block_skill">Disnake</li>
+                <li class="skill-block_skill">Discord.js</li>
+                <li class="skill-block_skill">Flask</li>
+                <li class="skill-block_skill">Quart</li>
+                <li class="skill-block_skill">Express</li>
+                <li class="skill-block_skill">Gulp</li>
+            </ul>
+    </div>
+    </div>
+</section>
+<section class="facts">
+    <h2></h2>
+</section>
 </body>
 </html>
